Implemented views for GET requests

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,6 +19,47 @@ body {
     align-items: center;
 }
 
+table {
+    border-collapse: collapse;
+    margin: 25px 0;
+    font-size: 0.9em;
+    font-family: sans-serif;
+    min-width: 400px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+}
+
+table thead tr {
+    background-color: #009879;
+    color: #ffffff;
+    text-align: left;
+}
+
+table th {
+    text-align: center;
+}
+
+table th,
+table td {
+    padding: 12px 15px;
+}
+
+table tbody tr {
+    border-bottom: thin solid #dddddd;
+}
+
+table tbody tr:nth-of-type(even) {
+    background-color: #f3f3f3;
+}
+
+table tbody tr:last-of-type {
+    border-bottom: 2px solid #009879;
+}
+
+table tbody tr.active-row {
+    font-weight: bold;
+    color: #009879;
+}
+
 p,
 ul {
     margin-top: 1rem;
@@ -38,6 +79,10 @@ code {
     padding: 0.1rem;
     background-color: rgb(148, 183, 235);
     font-size: 1rem;
+}
+
+.scroll-orizzontale {
+    overflow-x: auto;
 }
 
 @media screen and (min-width: 768px) {
